# eko-messenger

./: .dockerignore  .env.example  .env.template  .gitignore  Cargo.toml  Dockerfile  EXAMPLES.md  README.md  SPECIFICATION.md  activity-behavior.md  docker-compose.yml  docker-compose.zitadel.yaml  flake.nix  hash-chain-proposal.md  login-client.pat  process-compose.yaml
.sqlx/: query-0778069f219db6ff78008c9483e2a5be873d877205828528576e4d91f6e4cb29.json  query-09128c90398a8bc18d164087e9fea445e1b7cb45464f0c9fe1a412da2ca77b93.json  query-0d3a55a20f1554e0dfaddedc4110c8b18a4bc47d7ea3123260de585bf9095ee8.json  query-13cb417de77335bd5a6992b7a3fc9b62f456dddead8e619ec864b3f35fc8767f.json  query-17150d9e6bc2d47be9c6e6648638c6ce8b10fc47b1fe4f8779d508b83904d85b.json  query-224d0cf8a36da60eb8f6e1f03da19ebc9d0ed161bef5dbcfcad026c20afdb377.json  query-2269d325f00b2af01fe6ab9555b351e999b4ee67ee027fc5c38d47bad6bfff70.json  query-237e3bafd71fb040241ad5f17961ab87f058a3a8b14d6a24b832dc3c174cbe8c.json  query-24891a79f379762665c7e46ab95b5562fd45ee1f820aface32dd646117d11943.json  query-343544839d46e644df37d38d6af2f6ae38d5d700147bead8baa1f345e3e3dea3.json  query-36bf859105fe38d303813f5b9662a06d8f072e474570a562ce924e137c79958e.json  query-36c4b80bb4a3f2b57d37f1bd18a2892e6ccc91d6457d401bf64fab97f3a96024.json  query-38ea95e0dd68cabbcc8ba3c017c92034c22b5ae657dd4e5046c80646483e395d.json  query-3a11ea76eb2b8595126acddd7c348fb7f264ffdbb6a4cf2143cf1061da67708b.json  query-3f48e134f417eb25d60827a88e8dab86dda9fbe2c90bf64a0f3b3763b6e22326.json  query-3f970c6de686e7373dd1b87adf1e2ecb2af3d57ebc37b0f77bd19f7fc542fcf4.json  query-42b63bbe82c4c239cf03157282d15b6c6c26cf391aa0d5afb09f1b489b7da6c0.json  query-4611f4385e0b029cfda255e90c472cc07b0cbd9fa73a855277f84a6e2c2c0754.json  query-48095d7ec6cc95f4714b1e568704dd8035f6d6bb0521a72da3e275a852e62373.json  query-491fe455f8c7fe5ef2e73b52292f76ade005e47c8e8fb407df58e620e5067233.json  query-4a139d8fc3281f856e603ec1e911aa326e6263aea515c1474dcb80e2a229732a.json  query-4b95770a7e468af9313fe650de7f12ba66a09f452c28303958cff437216cb5e9.json  query-4d2e8c68b4a58d9d0987894cf206132641e849fef9e261bd13def9212bfcffb5.json  query-4da0c392bc423b5ef528f65db901e7c6c4b80872f2e9d28404343a51b8aac9dc.json  query-4e53983ccc67c0c4c59d691eb2deb22d7dcc8ba042d6413e26d72d1fc3c02a1a.json  query-567d09805cec0904c40c9a50734e7bda74e971f909cb730d7131850775977293.json  query-5a42b12b1c7c59e7393000eb5661d9cfae00966b503ab2f39d0c5760f2f19f75.json  query-5ea4a0e0c273eed3ef4071817dbb217da79ce7283213e372db125dfc73cc4754.json  query-609d65d1191a2e1958b0450bcaf261c2291c4a19529b67fe1e057fc201b9a1e3.json  query-614866a5b20c30e7fdd28645f982da82764b9aaeed7135b562150015f508bd90.json  query-68099e99a20d80610a2be0242e21f6f3ec24ecc3710c9b6bcdeb5b25e97c0180.json  query-6a87b87e14ca9fc440d1223136fbba2d387221a6c27b11b296a5c5c9352ac1a0.json  query-73edb3a457847a3eb93b121ceed955a4ef3ad383b0a49aaaf8bdb9546d578a2e.json  query-76452344807c2b084d505163f0ab60dc3e3af91204f5e4f45ba9e04570d99e2c.json  query-7765a96a5feca499c237660dc419e6f95234a4e89feee7edcdad2452d80cf67e.json  query-7aaeb8f8eca7affc5895a861dd660d3790eee0246d92a12e0e2eb4a7ff5da017.json  query-7b78461685dfc11ccab6a5b62d5c7c8ce32af1203adb4b299158a49bc408b8ef.json  query-7e636ee4c7a4b8adf930df75dbf5cd62637f9186b4da3ad557bd2bfedc39de99.json  query-8488f1fcb79d202d838dc1399f1e7f7090c7dcbeb8fc466c66d33d5b52df4751.json  (+27 more)
(+133 files in other folders)
