[package]
name = "eko-messenger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
axum-client-ip = "1.1.3"
axum-extra = {version="0.12.1", features=["typed-header"]}
time = { version = "0.3.36", features = ["serde"] }
jsonwebtoken = {version="10.2.0", features = ["rust_crypto"]}
redis = {version="0.32.7", features=["tokio-comp"]}
reqwest = {version="0.12.24", features=["json"]}
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.145"
sqlx = { version = "0.8.0", features = [ "runtime-tokio-rustls", "postgres", "macros", "migrate", "time" ] }
tokio = {version= "1.48.0", features= [ "full"]}
uuid = { version = "1.18.1", features = ["v4"] }
serde_with = {version= "3.16.0", features = ["base64"]}

[dev-dependencies]
async-trait = "0.1.89"
