[package]
name = "eko-messenger"
version = "0.1.0"
edition = "2024"

[features]
default = ["auth-local"]
auth-firebase = ["dep:gcp_auth"]
auth-local = ["dep:argon2"]
integration-firebase = []

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros", "ws"] }
axum-client-ip = "1.1.3"
axum-extra = { version = "0.12.1", features = ["typed-header"] }
time = { version = "0.3.36", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.0", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "migrate",
  "time",
  "uuid",
] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
serde_with = { version = "3.16.0", features = ["base64", "hex"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.43"
async-trait = "0.1.89"
gcp_auth = { version = "0.12.5", optional = true }
dashmap = "6.1.0"
futures = "0.3.31"
web-push = { version = "0.11.0", default-features = false, features = [
  "hyper-client",
  "hyper-tls",
] }
openssl = "0.10.75"
base64 = "0.22.1"
argon2 = { version = "0.5.3", optional = true }

[dev-dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
tokio-tungstenite = "0.24.0"
futures-util = "0.3.31"
